[package]
name = "api_proxy"
version = "0.1.0"
authors = ["Junfeng Liu <china.liujunfeng@gmail.com>"]

[dependencies]
hyper = "0.9"
nickel = "0.9.0"
uritemplate = "0.1.2"
toml = "0.2.1"
time = "*"
serde = "0.8.19"
serde_derive = "0.8.19"
serde_json = "0.8.3"
rustc-serialize = "0.3.19"

[[bin]]
name = "api_proxy"
doc = false
